[gd_scene load_steps=37 format=3 uid="uid://dqvv36meum2rq"]

[ext_resource type="Script" path="res://Characters/Playable/Exile/Exile.gd" id="1_ya1qa"]
[ext_resource type="Texture2D" uid="uid://drrekw0bk2kly" path="res://Characters/Playable/Tester/testcharidle-sheet.png" id="2_uwvy7"]
[ext_resource type="Texture2D" uid="uid://dtrispqdstpgr" path="res://Characters/Playable/Exile/ExileFall.png" id="3_0con2"]
[ext_resource type="Texture2D" uid="uid://cxuowjgd1pm7d" path="res://Characters/Playable/Tester/testcharidle.png" id="3_cphh0"]
[ext_resource type="Texture2D" uid="uid://cas5hymlj1c3s" path="res://Characters/Playable/Exile/ExileJump.png" id="4_fk8f5"]
[ext_resource type="Texture2D" uid="uid://dix0k2likp8ux" path="res://Characters/Playable/Exile/ExileIdleAnim.png" id="4_oly64"]
[ext_resource type="AudioStream" uid="uid://buymab2nl55k4" path="res://Sounds/Player/synthyjump.wav" id="4_rcg86"]
[ext_resource type="AudioStream" uid="uid://c6dwe7rsivu0w" path="res://Sounds/Player/synthydash.wav" id="5_g7t5e"]
[ext_resource type="AudioStream" uid="uid://dqv6kjk2oo4k2" path="res://Sounds/Player/toggledash.mp3" id="6_u7o4l"]
[ext_resource type="AudioStream" uid="uid://dwctqkdqkte01" path="res://Sounds/Player/dashunlock.wav" id="7_10g7k"]
[ext_resource type="AudioStream" uid="uid://bo7cu51mg0fxk" path="res://Sounds/Player/wallclimbunlock.wav" id="8_sadx6"]
[ext_resource type="AudioStream" uid="uid://v5qdxia7awch" path="res://Sounds/Player/slideunlock.wav" id="9_7bf5y"]
[ext_resource type="AudioStream" uid="uid://dvd0vj2v2enya" path="res://Sounds/Player/slamunlock.wav" id="10_pdvyh"]
[ext_resource type="AudioStream" uid="uid://dqp8uuw56gq2k" path="res://Sounds/Player/airjumpunlock.wav" id="11_v11jf"]
[ext_resource type="AudioStream" uid="uid://c4lux45q67ra2" path="res://Sounds/Player/synthyairjump.wav" id="12_bw75l"]
[ext_resource type="AudioStream" uid="uid://coaueuf8qpd67" path="res://Sounds/Player/synthypain.wav" id="13_q0ap7"]
[ext_resource type="Texture2D" uid="uid://pf4e2xrk2qtg" path="res://Characters/Effects/DashOKIndicator.png" id="14_i3dp3"]
[ext_resource type="AudioStream" uid="uid://6pf0j2jy831s" path="res://Sounds/Player/synthyzoomin.wav" id="18_sjvte"]
[ext_resource type="AudioStream" uid="uid://d4etxpqyppx4n" path="res://Sounds/Player/synthyzoomout.wav" id="19_o0tw0"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_83s8r"]
size = Vector2(14, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_m2ql7"]
atlas = ExtResource("2_uwvy7")
region = Rect2(100, 0, 20, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_pq6rp"]
atlas = ExtResource("2_uwvy7")
region = Rect2(0, 0, 20, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_h3jxa"]
atlas = ExtResource("2_uwvy7")
region = Rect2(20, 0, 20, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5j3kf"]
atlas = ExtResource("2_uwvy7")
region = Rect2(40, 0, 20, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_f3t65"]
atlas = ExtResource("2_uwvy7")
region = Rect2(60, 0, 20, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_b6boy"]
atlas = ExtResource("2_uwvy7")
region = Rect2(80, 0, 20, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2mgc3"]
atlas = ExtResource("2_uwvy7")
region = Rect2(100, 0, 20, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_nkrr1"]
atlas = ExtResource("4_oly64")
region = Rect2(93, 0, 22, 35)

[sub_resource type="AtlasTexture" id="AtlasTexture_bsot2"]
atlas = ExtResource("4_oly64")
region = Rect2(24, 0, 22, 35)

[sub_resource type="AtlasTexture" id="AtlasTexture_i8ju4"]
atlas = ExtResource("4_oly64")
region = Rect2(47, 0, 22, 35)

[sub_resource type="AtlasTexture" id="AtlasTexture_mn3tx"]
atlas = ExtResource("4_oly64")
region = Rect2(70, 0, 22, 35)

[sub_resource type="AtlasTexture" id="AtlasTexture_2w2gu"]
atlas = ExtResource("4_oly64")
region = Rect2(116, 0, 22, 35)

[sub_resource type="AtlasTexture" id="AtlasTexture_42fbc"]
atlas = ExtResource("4_oly64")
region = Rect2(139, 0, 22, 35)

[sub_resource type="AtlasTexture" id="AtlasTexture_4qxf1"]
atlas = ExtResource("4_oly64")
region = Rect2(162, 0, 22, 35)

[sub_resource type="AtlasTexture" id="AtlasTexture_kuk2w"]
atlas = ExtResource("2_uwvy7")
region = Rect2(20, 0, 20, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_a4yyl"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_m2ql7")
}],
"loop": true,
"name": &"dash",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_pq6rp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h3jxa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5j3kf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f3t65")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b6boy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2mgc3")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_0con2")
}],
"loop": true,
"name": &"fall",
"speed": 5.0
}, {
"frames": [{
"duration": 240.0,
"texture": SubResource("AtlasTexture_nkrr1")
}, {
"duration": 5.0,
"texture": SubResource("AtlasTexture_bsot2")
}, {
"duration": 50.0,
"texture": SubResource("AtlasTexture_i8ju4")
}, {
"duration": 5.0,
"texture": SubResource("AtlasTexture_mn3tx")
}, {
"duration": 240.0,
"texture": SubResource("AtlasTexture_nkrr1")
}, {
"duration": 5.0,
"texture": SubResource("AtlasTexture_2w2gu")
}, {
"duration": 50.0,
"texture": SubResource("AtlasTexture_42fbc")
}, {
"duration": 5.0,
"texture": SubResource("AtlasTexture_4qxf1")
}],
"loop": true,
"name": &"idle",
"speed": 60.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_fk8f5")
}],
"loop": true,
"name": &"jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_kuk2w")
}],
"loop": true,
"name": &"walk",
"speed": 5.0
}]

[node name="CharacterBody2D" type="CharacterBody2D"]
collision_layer = 3
floor_max_angle = 1.0472
floor_snap_length = 0.1
platform_floor_layers = 4294901763
platform_wall_layers = 3
script = ExtResource("1_ya1qa")

[node name="Camera2D" type="Camera2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 1)
shape = SubResource("RectangleShape2D_83s8r")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
light_mask = 2
visibility_layer = 3
sprite_frames = SubResource("SpriteFrames_a4yyl")
animation = &"idle"
frame_progress = 0.181305
offset = Vector2(0, -0.5)

[node name="Jumpsound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_rcg86")
volume_db = -10.0
max_polyphony = 5

[node name="Dashsound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_g7t5e")
volume_db = -10.0
max_polyphony = 5

[node name="ToggleDash" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_u7o4l")

[node name="PointLight2D" type="PointLight2D" parent="."]
visible = false
show_behind_parent = true
light_mask = 3
visibility_layer = 3
z_index = -1
energy = 1.53
range_layer_max = 5
shadow_enabled = true
shadow_item_cull_mask = 3
texture = ExtResource("3_cphh0")

[node name="DashUnlock" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_10g7k")
volume_db = -10.0

[node name="WallClimbUnlock" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("8_sadx6")
volume_db = -10.0

[node name="SlideUnlock" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("9_7bf5y")
volume_db = -10.0

[node name="SlamUnlock" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("10_pdvyh")
volume_db = -10.0

[node name="AirJumpUnlock" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("11_v11jf")
volume_db = -10.0

[node name="Airjumpsound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("12_bw75l")
volume_db = -10.0

[node name="Painsound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("13_q0ap7")
volume_db = -10.0

[node name="DashOKIndicator" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("14_i3dp3")

[node name="VelDebug" type="Label" parent="."]
visible = false
offset_left = -44.0
offset_top = -123.0
offset_bottom = -48.0
text = "VelX: 
VelY:
Dash:"

[node name="DashLabel" type="Label" parent="."]
visible = false
offset_top = -69.0
offset_right = 40.0
offset_bottom = -46.0

[node name="VelXLabel" type="Label" parent="."]
visible = false
offset_left = -20.0
offset_top = -40.0
offset_right = 20.0
offset_bottom = -17.0
horizontal_alignment = 1

[node name="VelYLabel" type="Label" parent="."]
visible = false
offset_left = -20.0
offset_top = -52.0
offset_right = 20.0
offset_bottom = -29.0
horizontal_alignment = 1

[node name="ZoomIn" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("18_sjvte")

[node name="ZoomOut" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("19_o0tw0")
